...
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rocket" translatesAutoresizingMaskIntoConstraints="NO" id="9GM-bY-eYB">
                                        <rect key="frame" x="0.0" y="0.0" width="427" height="512"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="zXu-52-6ij"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CometChat UI" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nzd-qi-GHb">
                                        <rect key="frame" x="114.5" y="524" width="198" height="35"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="35" id="2yD-fK-ctm"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                        <nil key="highlightedColor"/>
...
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Fy3-ac-DP6">
                                        <rect key="frame" x="131" y="653" width="165" height="31"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="ClB-bD-SHD"/>
                                        </constraints>
                                        <segments>
                                            <segment title="Fullscreen"/>
                                            <segment title="Popover"/>
                                        </segments>
                                    </segmentedControl>
                                </subviews>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
