...
/* Class = "UILabel"; text = "Label"; ObjectID = "2xh-FS-zbc"; */
"2xh-FS-zbc.text" = "Label";

/* Class = "UIBarButtonItem"; title = "Item"; ObjectID = "4NT-ax-RBb"; */
"4NT-ax-RBb.title" = "Item";

/* Class = "UILabel"; text = "superhero1"; ObjectID = "4WR-9C-j0d"; */
"4WR-9C-j0d.text" = "superhero1";

/* Class = "UILabel"; text = "Offine"; ObjectID = "5Tt-Qt-yy0"; */
"5Tt-Qt-yy0.text" = "Offine";

/* Class = "UIButton"; normalTitle = "Create Group"; ObjectID = "8pP-mw-mld"; */
...
